# sathus-platform

./: .coverage  .gitignore  .vercelignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT_HEALTH_REPORT.md  README.md  SECURITY.md  package-lock.json  package.json  tsconfig.json  turbo.json  vercel.json
apps/api/: .coverage  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
apps/api/.github/workflows/: ci.yml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 004_create_notification_tables.py  005_notification_queue_tables.py  006_create_knowledge_tables.py  007_create_cloud_platform_tables.py
apps/api/app/: __init__.py  main.py
apps/api/app/administration/: __init__.py
apps/api/app/ai/: __init__.py
apps/api/app/audit/: __init__.py
apps/api/app/authorization/: __init__.py
apps/api/app/cloud_platform/: __init__.py
apps/api/app/content/: __init__.py
apps/api/app/core/: config.py  database.py  exceptions.py  logging.py  middleware.py  redis.py  security.py
apps/api/app/identity/: __init__.py
apps/api/app/integration/: __init__.py
apps/api/app/knowledge/: __init__.py
apps/api/app/media/: __init__.py
apps/api/app/notification/: __init__.py
apps/api/app/reporting/: __init__.py
apps/api/app/search/: __init__.py
apps/api/sathus_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: conftest.py  test_cloud_platform.py  test_health.py  test_knowledge.py
apps/api/tests/administration/: __init__.py  test_administration.py
apps/api/tests/ai/: __init__.py  test_ai.py
(+2157 files in other folders)
